--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	}
 	],
 	"require": {
-      "nategood/httpful": "dev-master",
+      "nategood/httpful": "^0.2.20",
       "php": ">=5.6.0"
   },
 	"autoload": {
