Add support for CancelShipment and GetTrackingEvents

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "PHP SDK for the Parcel Monkey UK API",
 	"license": "MIT",
 	"keywords": ["parcel","delivery","api","shipping","tracking"],
-  "version": "2.0.2",
+  "version": "2.1",
 	"authors": [
 	{
 		"name": "Richard Barrett",
@@ -21,7 +21,9 @@
 		"src/request.php",
 		"src/HelloWorld.php",
 		"src/GetQuote.php",
-		"src/CreateShipment.php"
+		"src/CreateShipment.php",
+		"src/GetTrackingEvents.php",
+		"src/CancelShipment.php"
 		]
 	}
 }
